--- a/index.html
+++ b/index.html
@@ -1,13 +1,21 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" href="https://vfitclub.netlify.app/image/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>genforcefit_platform</title>
+    <meta name="description" content="VFitClub - Elevate Your Fitness Journey" />
+    
+    <title>Gen Force Fit - Movimento que Gera Resultado</title>
+
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;700&display=swap" rel="stylesheet">
+    
+    <link href="https://cdn.rawgit.com/michalsnik/aos/2.1.1/dist/aos.css" rel="stylesheet" />
   </head>
-  <body>
+  
+  <body style="background-color: #000000; margin: 0;">
     <div id="root"></div>
+
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
